--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CrossFit Xela</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v16.0"
+      nonce="0EXPHetp"
+    ></script>
   </head>
   <body>
+    <div id="fb-root"></div>
     <div id="root"></div>
   </body>
 </html>
